--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-router-dom": "^6.23.0",
     "react-toastify": "^9.1.2",
     "reactjs-popup": "2.0.5",
-    "swiper": "10.1.0"
+    "swiper": "^10.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
